<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center_vertical"
        android:padding="10dp">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/sd_avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:placeholderImage="@drawable/account_avatar"
            app:placeholderImageScaleType="centerCrop"
            app:roundedCornerRadius="100dp" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/label_login"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue">

        <TextView
            android:id="@+id/tv_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/favorites"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/label_favorite"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_offline_download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/download"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/label_offline_download"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/home"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:background="@color/selected_gray"
        android:padding="15dp"
        android:text="@string/home"
        android:textColor="@color/blue"
        android:textSize="16sp" />
</LinearLayout>