<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/common_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:contentDescription="@null"
            android:src="@drawable/splash_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="240dp"
            android:text="@string/weibo_login"
            android:textColor="#ddffffff"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/block_sina_weibo_login"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/sina_weibo"
                    android:contentDescription="@null"
                    android:src="@drawable/account_sina" />

                <TextView
                    android:id="@+id/sina_weibo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/sina_weibo"
                    android:textColor="@android:color/black" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/block_tencent_weibo_login"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_btn"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/tencent_weibo"
                    android:contentDescription="@null"
                    android:src="@drawable/account_tencent" />

                <TextView
                    android:id="@+id/tencent_weibo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/tencent_weibo"
                    android:textColor="@android:color/black" />
            </RelativeLayout>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="15dp"
            android:text="@string/tip_login"
            android:textColor="#88ffffff"
            android:textSize="12sp" />
    </FrameLayout>
</LinearLayout>